# METHOD

./: .gitignore  .simplecov  .travis.yml  CMakeLists.txt  Makefile  README.md  makePaths.sh  test_helper.rb  travis.yml  weno-coefficients.ipynb  weno.cc  weno.h  workflows.md
Doxumentation/: DoxMainpage.md  Doxyfile  Makefile  conf.py  config.txt  index.txt
Doxumentation/html/: DoxMainpage_8md.html  DoxMainpage_8md_source.html  IMEX2Args_8h.html  IMEX2Args_8h__dep__incl.map  IMEX2Args_8h__dep__incl.md5  IMEX2Args_8h__incl.map  IMEX2Args_8h__incl.md5  IMEX2Args_8h_source.html  IMEX3Args_8h.html  IMEX3Args_8h__dep__incl.map  IMEX3Args_8h__dep__incl.md5  IMEX3Args_8h__incl.map  IMEX3Args_8h__incl.md5  IMEX3Args_8h_source.html  RK2_8h.html  RK2_8h__dep__incl.map  RK2_8h__dep__incl.md5  RK2_8h__incl.map  RK2_8h__incl.md5  RK2_8h_source.html  SSP2_8h.html  SSP2_8h__dep__incl.map  SSP2_8h__dep__incl.md5  SSP2_8h__incl.map  SSP2_8h__incl.md5  SSP2_8h_source.html  SSP3_8h.html  SSP3_8h__incl.map  SSP3_8h__incl.md5  SSP3_8h_source.html  Todo_8md.html  Todo_8md_source.html  _formulas.tex  advanced.html  annotated.html  annotated_dup.js  backRKArgs_8h.html  backRKArgs_8h__dep__incl.map  backRKArgs_8h__dep__incl.md5  backRKArgs_8h__incl.map  (+381 more)
Examples/: animation.py  compare.py  copyData.sh  interactivePlot.py  runCompare.sh  runCompareParallelHDF5.sh  runCompareSerialHDF5.sh  text2hdf.py
Examples/KelvinHelmholtz/: Makefile.template
Examples/ToyQ/: plots.ipynb
Project/: DoxMainpage.md  Makefile  Todo.md  compare.py
Project/CPU/: CMakeLists.txt  Makefile
Project/CPU/CminpackLibrary/: Makefile
Project/CPU/Include/: .saveData.h.swp  Euler.h  IMEX2Args.h  REGIME.h  RK2.h  RKPlus.h  SSP2322.h  backRKArgs.h  backwardsRK.h  boundaryConds.h  checkpointArgs.h  dataArgs.h  fluxVectorSplitting.h  initFunc.h  initFuncFromCheckpoint.h  model.h  modelExtension.h  parallelBoundaryConds.h  parallelCheckpointArgs.h  parallelEnv.h  parallelInitFuncFromCheckpoint.h  parallelSaveData.h  parallelSaveDataHDF5.h  saveData.h  serialCheckpointArgs.h  serialEnv.h  serialSaveData.h  serialSaveDataHDF5.h  simData.h  srmhd.h  srrmhd.h  toy_q.h  toy_q_ce.h  twoFluidEMHD.h  weno.h
Project/CPU/Include/DataIO/: parallelSaveDataHDF5.h  serialSaveData.h
Project/CPU/Include/Flux/: flux.h  fluxVectorSplitting.h  weno.h  wenoUpwinds.h
Project/CPU/Include/InitialData/: initFunc.h
Project/CPU/Include/Physics/: hybrid.h  model.h
Project/CPU/Include/Simulation/: platformEnv.h  serialEnv.h  simulation.h
Project/CPU/Include/TimeIntegrators/: IMEX3Args.h  SSP2322.h  SSP3.h  rkSplit.h  rkSplit2ndOrder.h  timeInt.h
Project/CPU/Src/: Euler.cc  RK2.cc  RKPlus.cc  SSP2.cc  SSP3.cc  animation.py  checkpointArgs.cc  fluxVectorSplitting.cc  initFunc.cc  initFuncFromCheckpoint.cc  interactivePlot.py  main.cc  parallelCheckpointArgs.cc  parallelEnv.cc  parallelInitFuncFromCheckpoint.cc  parallelSaveDataHDF5.cc  plot.py  rkSplit2ndOrder.cc  serialCheckpointArgs.cc  serialEnv.cc  serialSaveDataHDF5.cc  simData.cc  simulation.cc  srmhd.cc  srrmhd.cc  toy_q.cc  toy_q_ce.cc  weno.cc
Project/CPU/Src/BoundaryConditions/: boundaryConds.cc
Project/CPU/Src/DataIO/: parallelSaveDataHDF5.cc  serialSaveDataHDF5.cc
Project/CPU/Src/Flux/: wenoUpwinds.cc
Project/CPU/Src/InitialData/: initFunc.cc
Project/CPU/Src/Physics/: Euler.cc
Project/CPU/Src/Simulation/: dataArgs.cc  serialCheckpointArgs.cc  simulation.cc
Project/CPU/Src/TimeIntegrators/: IMEX3Args.cc  RKPlus.cc  SSP2.cc  rkSplit.cc
Project/CminpackLibrary/: Makefile
Project/GPU/: Makefile  data_t0.checkpoint.hdf5  job.sh
Project/Include/: IMEX2Args.h  IMEX3Args.h  RK2.h  SSP2.h  SSP3.h  backRKArgs.h  backwardsRK.h  boundaryConds.h  flux.h  fluxVectorSplitting.h  initFunc.h  model.h  rkSplit.h  saveData.h  simData.h  simulation.h  srmhd.h  srrmhd.h  timeInt.h  twoFluidEMHD.h  weno.h
Project/Parallel/: Makefile  cleanData.sh  runMultipleSims.sh
Project/ParallelMPI/: CMakeLists.txt  Makefile
Project/Serial/: CMakeLists.txt  Makefile  Todo.md  cleanData.sh
Project/Serial/CminpackLibrary/: Makefile
Project/Serial/CminpackLibrary/Src/: qrfac.cc
Project/Serial/Include/: IMEX2Args.h  REGIME.h  RK2.h  SSP2.h  SSP2322.h  SSP3.h  backwardsRK.h  boundaryConds.h  flux.h  fluxVectorSplitting.h  hybrid.h  initFunc.h  model.h  modelExtension.h  resistiveSGM.h  rkSplit.h  rkSplit2ndOrder.h  saveData.h  simData.h  simulation.h  srmhd.h  srrmhd.h  subgridModel.h  timeInt.h  twoFluidEMHD.h
Project/Serial/Src/: IMEX3Args.cu  REGIME.cc  RK2.cc  RK2.cu  SSP2.cc  SSP2.cu  SSP2322.cc  SSP2322.cu  SSP3.cc  animation.py  backRKArgs.cc  backwardsRK.cc  boundaryConds.cc  fluxVectorSplitting.cc  fluxVectorSplitting.cu  hybrid.cc  initFunc.cc  initFunc.cu  interactivePlot.py  main.cc  main.cu  resistiveSGM.cc  rkSplit.cc  rkSplit2ndOrder.cc  saveData.cc  saveData.cu  simData.cc  simData.cu  simulation.cc  simulation.cu  srmhd.cc  srmhd.cu  srrmhd.cc  srrmhd.cu  twoFluidEMHD.cc  twoFluidEMHD.cu
Project/Src/: IMEX2Args.cu  IMEX3Args.cu  RK2.cu  SSP2.cu  SSP3.cu  backwardsRK.cu  boundaryConds.cu  fluxVectorSplitting.cu  initFunc.cu  interactivePlot.py  main.cu  model.cu  plotPrims.py  rkSplit.cu  (+6 more)
PubSrc/: REGIMEExtensionTerms.nb  ReconnectionRateAnalysis.py  conv.py  kolmogorov.py
Scripts/: compareHDF5.py  compareText.py  copyData.sh  dirText2hdf.py  runCompareParallelText2HDF5.sh  runCompareSerial2ParallelHDF5.sh  runCompareSerial2ParallelText.sh  runCompareSerialText2HDF5.sh  text2hdf.py
Src/: Makefile  boundaryConds.h  main.cu  model.cu  model.h  simulation.cu  simulation.h
Tests/: Makefile  play.py  test_model.cu  test_model_ctor.cu  test_simulation.cu
Tests/Serial/Src/: CMakeLists.txt  compareParallelAndSerial.py  test_REGIME.cc  test_boundaryConds.cc  test_cminpack.cc  test_fvs.cc  test_fvs.cu  test_imex.cc  test_initFunc.cc  test_parallel_rk2.cc  test_parallel_rkSplit.cc  test_resistiveSGM.cc  test_rk2.cc  test_rk2.cu  test_rkSplit.cc  test_simulation.cc  test_srmhd.cc  test_srmhd.cu  test_srrmhd.cc  test_srrmhd.cu  test_twoFluidEMHD.cc  test_twoFluidEMHD.cu
(+338 files in other folders)
